web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-func-module-sloppy/output.txt
[SyntaxError]: Identifier has already been declared. (1,21)
1|{ function foo() {} function foo() {} }
 |                   ^
